# post-bits

./: .env.tmpl  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
src/template_app/: __init__.py  addition.py
src/tests/: test_addition.py
